Fix issue with scrolling to target not working on iPhones

--- a/app/webroot/css/main.less
+++ b/app/webroot/css/main.less
@@ -816,6 +816,8 @@ dl.faq {
     dt {
         font-size: 120%;
         font-weight: bold;
+        margin-top: -90px;
+        padding-top: 90px;
     }
     dd {
         margin-bottom: 60px;
